<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">yelocity</string>

    <string name="city_name">Bangalore</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_closed">drawer_closed</string>
    <string name="enter_mobile_number">enter your mobile number</string>
    <string name="first_name">firstname</string>
    <string name="last_name">lastname</string>
    <string name="enter_your_query">enter your query</string>
    <string name="query">Query</string>
    <string name="broadcast">Broadcast</string>
    <string name="cancel">Cancel</string>
    <string name="query_message_hint">enter your query</string>
    <string name="image_profile_pic_description">Profile Picture</string>
    <string name="image_service_pic_description">Service Picture</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name(optional)</string>
    <string name="hint_desciption">about yourself</string>
    <string name="hint_service_name">Service Name</string>
    <string name="hint_service_desciption">service description</string>
    <string name="hint_city">city name</string>
    <string name="hint_country">state country</string>
    <string name="hint_address">enter address</string>
    <string name="query_tap_message">Press me to write Query</string>

    <string name="new_messages">%d new messages!</string>
    <string name="about_me">About me</string>
    <string name="my_services">My Services</string>
    <string name="contact_number_title">Contact Number</string>
    <string name="description_title">Description</string>
    <string name="budget_title">select your budget</string>
    <string name="preferred_location">Location</string>



    <!-- menu strings -->
    <string name="text_save">save</string>

    <string-array name="take_photo_choices">
        <item>Capture from Camera</item>
        <item>Add from Gallery</item>
    </string-array>

    <string-array name="budget_values_rent">
        <item>Select Budget</item>
        <item>upto 6k</item>
        <item>6k - 12k</item>
        <item>12k - 18k</item>
        <item>18k - 24k</item>
        <item>30k +</item>
    </string-array>

    <string-array name="budget_values_sale">
        <item>Select Budget</item>
        <item>upto 10 lacks</item>
        <item>10 lakhs - 20 lakhs</item>
        <item>20 lakhs - 40 lakhs</item>
        <item>40 lakhs - 70 lakhs</item>
        <item>70 lakhs +</item>
    </string-array>




    <string name="take_picture">Take picture</string>
    <string name="complete_action_using">complete action using..</string>

    <!-- Primary options for nav drawer -->
    <string-array name="nav_drawer_primary">
        <item>Logout   </item>
    </string-array>

    <!-- Secondary options for nav drawer -->
    <string-array name="nav_drawer_secondary">
        <item>EDIT PROFILE</item>
        <item>SHARE THE APP</item>
        <item>RATE US</item>
        <item>SEND FEEDBACK</item>
        <item>ABOUT US</item>
    </string-array>
    <string-array name="home_screen_titles">
        <item>Me</item>
        <item>Categories</item>
        <item>Chats</item>
    </string-array>

    <string-array name="search_services_titles">
        <item>Chats</item>
        <!--<item>Query</item>-->
        <item>Top Vendors</item>
    </string-array>

    <string-array name="chat_longclick_choices">
        <item>Delete Chat</item>
    </string-array>
    <string name="chat_longclick_dialog_head">Chat Options</string>
    <string name="delete_chat_alert_message">Are you sure you want to delete this chat?</string>



    <string name="title_activity_auth">Authentication</string>
    <string name="title_activity_editprofile">Edit Profile</string>
    <string name="title_activity_createservice">Create Service</string>
    <string name="title_activity_search_service">Search Service</string>
    <string name="title_activity_chat_screen">Chat</string>



    <string name="sending">&#8230;</string>
    <string name="failed">Failed to send. Tap to retry.</string>

    <string name="service_chat">Chat Service</string>
    <string name="receiver_network">Receiver Network</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter your message</string>

    <string name="verifying_tag">verifying...</string>
    <string name="activate_tag">activate</string>


    <!-- View tag keys. These don't need values -->
    <string name="tag_barter_type" />
    <string name="tag_resend_on_click" />


    <!-- menu strings -->
    <string name="action_search">search</string>




</resources>
