<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:flatui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_margin">


        <FrameLayout
            android:id="@+id/container_user_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true">

            <com.lovocal.widgets.CircleImageView
                android:id="@+id/image_profile_pic"
                android:layout_width="@dimen/edit_profile_img_size"
                android:layout_height="@dimen/edit_profile_img_size"
                app:imageBorderColor="@color/sand_primary"
                app:imageBorderWidth="2dp"
                app:imageCornerRadius="@dimen/edit_profile_img_radius"
                android:contentDescription="@string/image_profile_pic_description"
                android:background="@color/transparent"
                android:alpha="0.35" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/transparent"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/ic_action_camera_dark" />

        </FrameLayout>


        <com.lovocal.widgets.views.FlatEditText
            flatui:fieldStyle="transparent"
            android:id="@+id/text_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/container_user_image"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_toRightOf="@id/container_user_image"
            android:hint="@string/hint_first_name"
            android:singleLine="true"
            android:textSize="@dimen/text_medium"
            app:fontStyle="regular" />

        <com.lovocal.widgets.views.FlatEditText
            flatui:fieldStyle="transparent"
            android:id="@+id/text_last_name"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_first_name"
            android:layout_alignLeft="@id/text_first_name"
            android:hint="@string/hint_last_name"
            android:singleLine="true"
            android:textSize="@dimen/text_medium"
            app:fontStyle="regular" />


        <com.lovocal.widgets.views.FlatEditText
            flatui:fieldStyle="transparent"
            android:id="@+id/text_about_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/container_user_image"
            android:layout_below="@id/container_user_image"
            android:hint="@string/hint_desciption"
            android:layout_marginTop="@dimen/margin_medium"
            android:inputType="textAutoComplete|textCapSentences|textMultiLine"
            android:lines="3"
            android:maxLines="3"
            android:maxLength="140"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/text_medium"
            app:fontStyle="regular" />


    </RelativeLayout>
</ScrollView>
